index fix test
index page not showing up when pushed, attempt to fix?

--- a/css/common.css
+++ b/css/common.css
@@ -20,7 +20,6 @@
 .logoContainer {
     top: 0;
     bottom: 0;
-    content:"./branding/at-the-creative-school.svg" ;
     margin: auto;
 	align-items: right;
 }
